syntax = "proto3";

package hoz.proto.v1.lang;

option java_multiple_files = true;
option java_package = "net.hoz.api.service";

import "hoz/proto/v1/data/CommonData.proto";
import "google/protobuf/empty.proto";

message LangData {
  string code = 1;
  string data = 2;
}

message LangRequest {
  string code = 1;
}

service NetLangService {
  rpc one(LangRequest) returns (hoz.proto.v1.data.ResultableData);

  rpc all(google.protobuf.Empty) returns (stream LangData);

  rpc subscribe(google.protobuf.Empty) returns (stream LangData);
}